--- a/aula08/interna.html
+++ b/aula08/interna.html
@@ -13,5 +13,11 @@
     <h2>Bem vindo!</h2>
     <div id="user"></div>
     <button onclick="logout()">Logout</button>
+    <br>
+    <button onclick="listarUsuarios()">Listar Usuarios</button>
+    <br><br>
+    <div id="tabela"> </div>
+    <br>
+    <div id="selecao"></div>
 </body>
 </html>
